// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogContent Snapshot - No overflow 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow: auto;
}

.c0.overflow {
  border-bottom: 1px solid #DEE1E5;
  border-top: 1px solid #DEE1E5;
  box-shadow: inset 0 -4px 4px -4px #DEE1E5;
}

.c1 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

<div
  className="c0 false"
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "4rem",
        }
      }
    >
      Stuff
    </div>
  </div>
</div>
`;

exports[`DialogContent Snapshot 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow: auto;
}

.c0.overflow {
  border-bottom: 1px solid #DEE1E5;
  border-top: 1px solid #DEE1E5;
  box-shadow: inset 0 -4px 4px -4px #DEE1E5;
}

.c1 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

<div
  className="c0 false"
>
  <div
    className="c1"
  >
    Stuff
  </div>
</div>
`;
